# max30-near

./: .gitignore  README.md  package-lock.json  package.json
backend/: config.js  index.js  server.js  utils.js
contract/: Cargo.toml  build.sh  deploy.sh
contract/neardev/: dev-account  dev-account.env
contract/src/: events.rs  lib.rs  tools.rs  types.rs  view.rs
frontend/: package-lock.json  package.json  tsconfig.json
frontend/assets/Scene/: Game.scene
frontend/assets/Script/: AudioManager.ts  Bet.ts  BurstButton.ts  Game.ts  Roller.ts  UserInfo.ts  UserItem.ts  UserList.ts  Utils.ts  config.ts  near-api-cocos.min.js
frontend/assets/resources/Atlas/: atlas.plist
frontend/assets/resources/Audio/: roll.m4a
frontend/assets/resources/Prefabs/: UserItem.prefab
frontend/build-templates/web-desktop/: index.ejs  near-api-cocos.min.js
frontend/extensions/localization-editor/static/assets/core/: l10n-manager.ts
frontend/localization-editor/translate-data/: en-US.yaml  en.yaml  index.yaml  zh-Hans-CN.yaml
